force-app/main/default/objects/PDI_Unit__c/PDI_Unit__c.object-meta.xml
<CustomObject>
    <label>PDI Unit</label>
    <nameField>
        <label>PDI Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDI Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>