force-app/main/default/objects/PDI_Unit__c/fields/AC_Belt_Tension_Adjusted_LBS__c.field-meta.xml
<CustomField>
    <fullName>AC_Belt_Tension_Adjusted_LBS__c</fullName>
    <label>AC Belt Tension - Adjusted (LBS)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>