force-app/main/default/objects/PDI_Unit__c/fields/Bled_Power_Steering__c.field-meta.xml
<CustomField>
    <fullName>Bled_Power_Steering__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Bled Power Steering</label>
    <type>Checkbox</type>
</CustomField>