force-app/main/default/objects/PDI_Unit__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>PDI</relationshipLabel>
    <relationshipName>PDI_Units</relationshipName>
    <type>Lookup</type>
</CustomField>