force-app/main/default/objects/PDI_Unit__c/fields/Clear_Inactive_Codes__c.field-meta.xml
<CustomField>
    <fullName>Clear_Inactive_Codes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear Inactive Codes</label>
    <type>Checkbox</type>
</CustomField>