force-app/main/default/objects/PDI_Unit__c/fields/Customer_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Inspection_Date__c</fullName>
    <label>Customer Inspection Date</label>
    <type>Date</type>
</CustomField>