force-app/main/default/objects/PDI_Unit__c/fields/Delivery_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Mileage__c</fullName>
    <label>Delivery Mileage</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>