force-app/main/default/objects/PDI_Unit__c/fields/Drain_High_Pressure_CNG_Filter__c.field-meta.xml
<CustomField>
    <fullName>Drain_High_Pressure_CNG_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drain High Pressure CNG Filter</label>
    <type>Checkbox</type>
</CustomField>