force-app/main/default/objects/PDI_Unit__c/fields/FS_PDI_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_PDI_Date__c</fullName>
    <label>FS PDI Date</label>
    <type>Date</type>
</CustomField>