force-app/main/default/objects/PDI_Unit__c/fields/Green_Sheet_Date__c.field-meta.xml
<CustomField>
    <fullName>Green_Sheet_Date__c</fullName>
    <formula>Bus__r.Green_Sheet_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Green Sheet Date</label>
    <type>Date</type>
</CustomField>