force-app/main/default/objects/PDI_Unit__c/fields/Install_Fuel_Poppet_Valve__c.field-meta.xml
<CustomField>
    <fullName>Install_Fuel_Poppet_Valve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Install Fuel Poppet Valve</label>
    <type>Checkbox</type>
</CustomField>