force-app/main/default/objects/PDI_Unit__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <formula>text(Bus__r.Sales_Order__r.Length__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length</label>
    <type>Text</type>
</CustomField>