force-app/main/default/objects/PDI_Unit__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <formula>text( Bus__r.Sales_Order__r.Mode__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mode</label>
    <type>Text</type>
</CustomField>