force-app/main/default/objects/PDI_Unit__c/fields/PDI_Report__c.field-meta.xml
<CustomField>
    <fullName>PDI_Report__c</fullName>
    <label>PDI Report</label>
    <referenceTo>PDI_Report__c</referenceTo>
    <relationshipLabel>PDI Units</relationshipLabel>
    <relationshipName>PDI_Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>