force-app/main/default/objects/PDI_Unit__c/validationRules/Account_PDI_Unit.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_PDI_Unit</fullName>
    <active>true</active>
    <description>Validates the account for the bus is the same as the PDI report</description>
    <errorConditionFormula>not(Bus__r.Sales_Order__r.Account__r.Id = PDI_Report__r.Account__r.Id)</errorConditionFormula>
    <errorDisplayField>Bus__c</errorDisplayField>
    <errorMessage>This bus does not belong to this account</errorMessage>
</ValidationRule>